--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,27 @@
 {
-  "name": "LEGAL BABY - Music Distribution & Artist Services",
+  "name": "LEGAL BABY - Independent Music Distribution",
   "short_name": "LEGAL BABY",
-  "description": "Next-generation music distribution platform for independent artists",
+  "description": "Next-generation music distribution and artist services platform for independent creators",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0a0a0a",
   "theme_color": "#ff6600",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "categories": ["music", "entertainment", "business"],
+  "lang": "en-US",
+  "dir": "ltr"
 }
